refactor: simplify exception hierarchy and remove redundant NotFound exceptions
- Remove 4 redundant custom NotFound exception classes (use JPA's EntityNotFoundException instead)
- Keep only semantically different exceptions: DuplicateResourceException, AppointmentConflictException, BusinessRuleException
- Update all services to use EntityNotFoundException for 404 responses
- Simplify RestExceptionHandler from 5 to 3 exception handlers
- Maintain centralized exception handling with proper HTTP status codes
- All 33 tests passing, 100% success rate