@@ -1,5 +1,7 @@
 package com.example.clinic.services;
 
+import com.example.clinic.exceptions.BusinessRuleException;
+import com.example.clinic.exceptions.DuplicateResourceException;
 import com.example.clinic.models.Doctor;
 import com.example.clinic.dto.AppointmentDTO;
 import com.example.clinic.models.Appointment;
@@ -8,6 +10,7 @@ import com.example.clinic.models.Specialty;
 import com.example.clinic.repositories.DoctorRepository;
 import com.example.clinic.repositories.AppointmentRepository;
 import com.example.clinic.repositories.SpecialtyRepository;
+import jakarta.persistence.EntityNotFoundException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -16,10 +19,19 @@ import java.time.LocalTime;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Service
 public class DoctorService {
+
+    private static final String DOCTOR_NOT_FOUND = "Doctor not found";
+    private static final String SPECIALTY_NOT_FOUND = "Specialty not found.";
+    private static final String START_TIME_KEY = "startTime";
+    private static final String END_TIME_KEY = "endTime";
+    private static final String APPOINTMENT_DATE_KEY = "appointmentDate";
+    private static final String STATUS_KEY = "status";
+    private static final String DOCTOR_NAME_KEY = "doctorName";
+    private static final String PATIENT_NAME_KEY = "patientName";
+    private static final String APPOINTMENT_ID_KEY = "appointmentId";
 
     private final DoctorRepository doctorRepository;
     private final SpecialtyRepository specialtyRepository;
@@ -38,19 +50,19 @@ public class DoctorService {
 
     public Doctor findDoctorById(Integer id) {
         return doctorRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Doctor not found"));
+                .orElseThrow(() -> new EntityNotFoundException(DOCTOR_NOT_FOUND));
     }
 
     @Transactional
     public Doctor createDoctor(Doctor doctor) {
-        if (doctorRepository.existsByCrm(doctor.getMedicalLicense())) {
-            throw new RuntimeException("Medical license already registered for another doctor.");
+        if (doctorRepository.existsByMedicalLicense(doctor.getMedicalLicense())) {
+            throw new DuplicateResourceException("Medical license already registered for another doctor.");
         }
 
         Integer specialtyId = doctor.getSpecialty().getSpecialtyId();
 
         Specialty specialty = specialtyRepository.findById(specialtyId)
-                .orElseThrow(() -> new RuntimeException("Specialty not found."));
+                .orElseThrow(() -> new BusinessRuleException(SPECIALTY_NOT_FOUND));
 
         doctor.setSpecialty(specialty);
 
@@ -60,17 +72,17 @@ public class DoctorService {
     @Transactional
     public Doctor updateDoctor(Integer id, Doctor updatedDoctor) {
         Doctor existingDoctor = doctorRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Doctor not found"));
+                .orElseThrow(() -> new EntityNotFoundException(DOCTOR_NOT_FOUND));
 
         if (!existingDoctor.getMedicalLicense().equals(updatedDoctor.getMedicalLicense()) &&
-                doctorRepository.existsByCrm(updatedDoctor.getMedicalLicense())) {
-            throw new RuntimeException("Medical license already registered for another doctor.");
+                doctorRepository.existsByMedicalLicense(updatedDoctor.getMedicalLicense())) {
+            throw new DuplicateResourceException("Medical license already registered for another doctor.");
         }
 
         if (updatedDoctor.getSpecialty() != null) {
             Specialty specialty = specialtyRepository.findById(
                     updatedDoctor.getSpecialty().getSpecialtyId())
-                    .orElseThrow(() -> new RuntimeException("Specialty not found."));
+                    .orElseThrow(() -> new BusinessRuleException(SPECIALTY_NOT_FOUND));
 
             existingDoctor.setSpecialty(specialty);
         }
@@ -87,20 +99,20 @@ public class DoctorService {
     @Transactional
     public void deleteDoctor(Integer id) {
         Doctor doctor = doctorRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Doctor not found"));
+                .orElseThrow(() -> new EntityNotFoundException(DOCTOR_NOT_FOUND));
 
         boolean hasScheduledAppointments = appointmentRepository.existsByDoctorIdAndStatus(id,
                 AppointmentStatus.SCHEDULED);
 
         if (hasScheduledAppointments) {
-            throw new RuntimeException("Cannot delete doctor because he has scheduled appointments.");
+            throw new BusinessRuleException("Cannot delete doctor because he has scheduled appointments.");
         }
 
         doctorRepository.delete(doctor);
     }
 
     public List<Doctor> listBySpecialty(Integer specialtyId) {
-        return doctorRepository.findBySpecialtyId(specialtyId);
+        return doctorRepository.findBySpecialty_SpecialtyId(specialtyId);
     }
 
     @Transactional(readOnly = true)
@@ -109,15 +121,15 @@ public class DoctorService {
 
         return appointments.stream().map(c -> {
             AppointmentDTO dto = new AppointmentDTO();
-            dto.setId((Integer) c.get("appointmentId"));
-            dto.setAppointmentDate(((java.sql.Date) c.get("appointmentDate")).toLocalDate());
-            dto.setStartTime(((java.sql.Time) c.get("startTime")).toLocalTime());
-            dto.setEndTime(((java.sql.Time) c.get("endTime")).toLocalTime());
-            dto.setStatus((String) c.get("status"));
-            dto.setDoctorName((String) c.get("doctorName"));
-            dto.setPatientName((String) c.get("patientName"));
+            dto.setId((Integer) c.get(APPOINTMENT_ID_KEY));
+            dto.setAppointmentDate(((java.sql.Date) c.get(APPOINTMENT_DATE_KEY)).toLocalDate());
+            dto.setStartTime(((java.sql.Time) c.get(START_TIME_KEY)).toLocalTime());
+            dto.setEndTime(((java.sql.Time) c.get(END_TIME_KEY)).toLocalTime());
+            dto.setStatus((String) c.get(STATUS_KEY));
+            dto.setDoctorName((String) c.get(DOCTOR_NAME_KEY));
+            dto.setPatientName((String) c.get(PATIENT_NAME_KEY));
             return dto;
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
     @Transactional(readOnly = true)
@@ -126,15 +138,15 @@ public class DoctorService {
 
         return appointments.stream().map(c -> {
             AppointmentDTO dto = new AppointmentDTO();
-            dto.setId((Integer) c.get("appointmentId"));
-            dto.setAppointmentDate(((java.sql.Date) c.get("appointmentDate")).toLocalDate());
-            dto.setStartTime(((java.sql.Time) c.get("startTime")).toLocalTime());
-            dto.setEndTime(((java.sql.Time) c.get("endTime")).toLocalTime());
-            dto.setStatus((String) c.get("status"));
-            dto.setDoctorName((String) c.get("doctorName"));
-            dto.setPatientName((String) c.get("patientName"));
+            dto.setId((Integer) c.get(APPOINTMENT_ID_KEY));
+            dto.setAppointmentDate(((java.sql.Date) c.get(APPOINTMENT_DATE_KEY)).toLocalDate());
+            dto.setStartTime(((java.sql.Time) c.get(START_TIME_KEY)).toLocalTime());
+            dto.setEndTime(((java.sql.Time) c.get(END_TIME_KEY)).toLocalTime());
+            dto.setStatus((String) c.get(STATUS_KEY));
+            dto.setDoctorName((String) c.get(DOCTOR_NAME_KEY));
+            dto.setPatientName((String) c.get(PATIENT_NAME_KEY));
             return dto;
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
     @Transactional(readOnly = true)
